@@ -2960,7 +2960,7 @@ sub _end_line($$$)
       }
       push @{$self->{'floats'}->{$type}}, $float
         unless (_ignore_global_commands($self));
-      $float->{'float_section'} = $self->{'current_section'} 
+      $float->{'extra'}->{'float_section'} = $self->{'current_section'} 
         if (defined($self->{'current_section'}));
     }
     $current = $current->{'parent'};
